--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@ body {
   font-family: Kanit, Arial, Helvetica, sans-serif;
 }
 
+main {
+  height: calc(100% - 110px);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
